// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Remove vue extend should not remove a function 1`] = `
"
import extend from './extend';

export default extend({
  data() {
    return { message: 'Hello!' };
  }
});"
`;

exports[`Remove vue extend should not remove a non Ctor method 1`] = `
"
import Vue from 'vue';

export default Vue.something.extend({
  data() {
    return { message: 'Hello!' };
  }
});"
`;

exports[`Remove vue extend should not remove local binding 1`] = `
"
const Vue = {
  extend() {}
};

export default {
  data() {
    return { message: 'Hello!' };
  }
};"
`;

exports[`Remove vue extend should remove Vue.extend 1`] = `
"

export default {
  data() {
    return { message: 'Hello!' };
  }
};"
`;

exports[`Remove vue extend should remove but move into extends option 1`] = `
"
import Sub from './Sub.vue';

export default {
  extends: Sub,

  data() {
    return { message: 'Hello!' };
  }
};"
`;
